--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Create build directory
       run: mkdir build
     - name: Run CMake on TiledIntegration
-      run: cd build; cmake -G "Visual Studio 16 2019" -A x64 ..
+      run: cd build; cmake ..
       shell: pwsh
     - name: Compile TiledIntegration
       run: cmake --build build --config Release -- /m:8
