--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install G++ and build-essential
       run: sudo apt-get install -y build-essential g++
     - name: Compile TiledIntegration
-      run: cd build; cmake ..; make -j8
+      run: cmake --build build --config Release -- /m:8
     - name: Create package
-      run: cp ./build/Release/tiled_integration release/
+      run: cp ./build/tiled_integration release/
     - name: Package to archive
       run: tar -cvf obengine-tiled-integration.tar release/ ; gzip -9 obengine-tiled-integration.tar
     - name: Upload Release Asset
@@ -81,9 +81,9 @@ jobs:
     - name: Run CMake on TiledIntegration
       run: cd build && cmake ..
     - name: Compile TiledIntegration
-      run: cd build && make -j8
+      run: cmake --build build --config Release -- /m:8
     - name: Create package
-      run: cp ./build/Release/tiled_integration release/
+      run: cp ./build/tiled_integration release/
     - name: Package to archive
       run: tar -cvf obengine-tiled-integration.tar release/ ; gzip -9 obengine-tiled-integration.tar
     - name: Upload Release Asset
