--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -35,7 +35,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./obengine-tiled-integration.tar
+        asset_path: ./obengine-tiled-integration.tar.gz
         asset_name: obengine-tiled-integration.linux64.tar.gz
         asset_content_type: application/zip
 
@@ -95,6 +95,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./obengine-tiled-integration.tar
+        asset_path: ./obengine-tiled-integration.tar.gz
         asset_name: obengine-tiled-integration.macos64.tar.gz
         asset_content_type: application/zip
